# alter8-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
docs/: alter8_data_model.md
scripts/: python-services.sh
services/api-gateway/: .env.example  Dockerfile.dev  package.json
services/api-gateway/src/: server.js
services/auth-service/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  setup.py
services/auth-service/app/: main.py
services/auth-service/app/api/v1/: api.py
services/auth-service/app/api/v1/endpoints/: admin.py  auth.py  otp.py  users.py
services/auth-service/app/core/: config.py  database.py  deps.py  middleware.py  redis_client.py  security.py
services/auth-service/app/models/: agent_profile.py  customer_profile.py  otp_verification.py  user.py
services/auth-service/app/schemas/: auth.py  otp.py  token.py  user.py
services/auth-service/app/services/: otp_service.py  rate_limit_service.py  token_service.py  user_service.py
services/tenant-service/: pyproject.toml
services/tenant-service/app/: main.py
tools/db-migrations/: init.sql
